--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "sass": "^1.35.2"
+    "sass": "^1.35.2",
+    "three": "^0.130.1"
   },
   "scripts": {
     "start": "react-scripts start",
