--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.35.2",
-    "three": "^0.130.1"
+    "three": "^0.130.1",
+    "timeago.js": "^4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
