--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.35.2",
+    "socket.io-client": "^4.1.3",
     "three": "^0.130.1",
     "timeago.js": "^4.0.2"
   },
